--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^7.12.1",
     "@sanity/image-url": "^1.2.0",
+    "@stripe/stripe-js": "^8.5.2",
     "@types/mdx": "^2.0.13",
     "framer-motion": "^12.23.24",
     "groq": "^4.13.0",
